# pravega-client-rust

./: .gitignore  .rustfmt.toml  .travis.yml  1  404.html  CHANGELOG.md  Cargo.toml  NOTICE  PythonBindings.html  README.md  byteStreamClient.html  codecov.yml  contribution.html  eventReader.html  eventWriter.html  index.html  print.html  quickStart.html  rust-toolchain  searchindex.js  searchindex.json  test.txt  types.toml
RUST/: index.html  (+9 more)
auth/: Cargo.toml  README.md
auth/src/: lib.rs
bindings/: Cargo.toml  PythonBinding.md  README.md  Readme.md  pravega_client.html  pyproject.toml  tox.ini
bindings/src/: lib.rs  pravega_client_test.py  pravega_reader_test.py  stream_manager.rs  stream_reader.rs  stream_reader_group.rs  stream_writer.rs  stream_writer_transactional.rs  transaction.rs
bindings/tests/: pravega_client_sample.py  pravega_client_test.py  pravega_reader_test.py
channel/: Cargo.toml  README.md
channel/src/: lib.rs
config/: Cargo.toml  README.md
config/src/: connection_type.rs  credentials.rs  lib.rs
connection_pool/: Cargo.toml  README.md
connection_pool/src/: connection_pool.rs  lib.rs
controller-client/: Cargo.toml  Readme.md  build.rs
controller-client/proto/: Controller.proto
controller-client/src/: cli.rs  cli.yml  lib.rs  main.rs  mock_controller.rs  model_helper.rs  paginator.rs  test.rs
examples/: Cargo.toml  README.md  event_write_and_read.rs
golang/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  go.mod  go.sum
golang/bench_test/: go.mod  go.sum  main.go
golang/benches/: go.mod  go.sum  main.go
golang/client_go/: go.mod
golang/examples/: main.go
golang/pkg/: chan.go  common.h  config.go  memory.go  pkg.go  pravega_client.h  reactor.go  stream_manager.go  stream_reader.go  stream_reader_group.go  stream_writer.go
golang/src/: config.rs  error.rs  lib.rs  memory.rs  reactor.rs  stream_manager.rs  stream_reader.rs  stream_reader_group.rs  stream_writer.rs
golang/test/: Makefile  main.cc
integration_test/: Cargo.toml  build.rs  ca-cert.crt  log.md  t  test.txt
integration_test/certs/: ca-cert.crt  invalid.crt
integration_test/src/: authentication_test.rs  byte_reader_writer_tests.rs  byte_stream_tests.rs  controller_tests.rs  disconnection_tests.rs  event_reader_tests.rs  event_stream_reader_tests.rs  event_stream_writer_tests.rs  event_writer_tests.rs  index_stream_tests.rs  lib.rs  main.rs  pravega_service.rs  reader_group_tests.rs  synchronizer_tests.rs  table_tests.rs  tablemap_tests.rs  tablesynchronizer_tests.rs  tests.rs  transactional_event_stream_writer_tests.rs  transactional_event_writer_tests.rs  utils.rs  wirecommand_tests.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
nodejs/: .prettierrc  Cargo.toml  README.md  async_test.ts  index.html  index.ts  modules.html  native_cjs.ts  native_esm.ts  package-lock.json  package.json  release_cjs.py  stream_manager.ts  stream_reader.ts  stream_reader_group.ts  stream_writer.ts  stream_writer_transactional.ts  tsconfig-cjs.json  tsconfig.json
nodejs/assets/: highlight.css  search.js
nodejs/functions/: stream_manager.StreamManager-1.html  stream_reader.StreamReader-1.html  stream_reader_group.StreamReaderGroup-1.html  stream_writer.StreamWriter-1.html  stream_writer_transactional.StreamTxnWriter-1.html  stream_writer_transactional.Transaction-1.html
nodejs/interfaces/: stream_manager.StreamCut.html  stream_manager.StreamManager.html  stream_manager.StreamRetentionPolicy.html  stream_manager.StreamScalingPolicy.html  stream_reader.Event.html  stream_reader.Slice.html  stream_reader.StreamReader.html  stream_reader_group.StreamReaderGroup.html  stream_writer.StreamWriter.html  stream_writer_transactional.StreamTxnWriter.html  stream_writer_transactional.Transaction.html
nodejs/modules/: index.html  native_esm.html  stream_manager.html  stream_reader.html  stream_reader_group.html  stream_writer.html  stream_writer_transactional.html
nodejs/src/: lib.rs  stream_manager.rs  stream_reader.rs  stream_reader_group.rs  stream_writer.rs  stream_writer_transactional.rs  transaction.rs  util.rs
nodejs/tests/: client.test.ts  stream_manager.test.ts  stream_manager.ts  stream_reader.test.ts  stream_reader.ts  transactions.test.ts  write.py
nodejs/variables/: native_esm.EventDataData.html  native_esm.EventDataOffset.html  native_esm.EventDataToString.html  native_esm.SliceNext.html  native_esm.StreamManagerCreateReaderGroup.html  native_esm.StreamManagerCreateScope.html  native_esm.StreamManagerCreateStreamWithPolicy.html  native_esm.StreamManagerCreateTxnWriter.html  native_esm.StreamManagerCreateWriter.html  native_esm.StreamManagerDeleteReaderGroup.html  native_esm.StreamManagerDeleteScope.html  native_esm.StreamManagerDeleteStream.html  native_esm.StreamManagerGetStreamTags.html  native_esm.StreamManagerListScopes.html  native_esm.StreamManagerListStreams.html  native_esm.StreamManagerNew.html  native_esm.StreamManagerSealStream.html  native_esm.StreamManagerToString.html  native_esm.StreamManagerUpdateStreamWithPolicy.html  native_esm.StreamReaderGetSegementSlice.html  native_esm.StreamReaderGroupCreateReader.html  native_esm.StreamReaderGroupReaderOffline.html  native_esm.StreamReaderGroupToString.html  native_esm.StreamReaderReaderOffline.html  native_esm.StreamReaderReleaseSegment.html  native_esm.StreamReaderToString.html  native_esm.StreamRetentionPolicyBySize.html  native_esm.StreamRetentionPolicyByTime.html  native_esm.StreamRetentionPolicyNone.html  native_esm.StreamRetentionStreamCutHead.html  native_esm.StreamRetentionStreamCutTail.html  native_esm.StreamScalingPolicyByDataRate.html  native_esm.StreamScalingPolicyByEventRate.html  native_esm.StreamScalingPolicyFixed.html  (+15 more)
pravegactl/: Cargo.toml  README.md
praveglet/: Cargo.toml  README.md
python/: Cargo.toml  PythonBinding.md  pravega_client.html  pyproject.toml  tox.ini
python_binding/: Cargo.toml  PythonBinding.md  README.md  pyproject.toml  tox.ini
retry/: Cargo.toml  README.md
shared/: Cargo.toml  README.md  Readme.md
wire_protocol/: Cargo.toml  README.md
(+688 files in other folders)
