[package]
name = "pravega-client-rust"
version = "0.1.0"
edition = "2018"
categories = ["Network programming"]
keywords = ["streaming", "client", "pravega"]
readme = "README.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "A Rust client for Pravega. (Pravega.io)"
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
           "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "controller-client", "shared", "wire_protocol", "retry", "integration_test", "connection_pool", "channel", "bindings", "auth", "config"
]

[dependencies]
pravega-rust-client-shared = { path = "./shared"}
pravega-controller-client = { path = "./controller-client"}
pravega-wire-protocol = { path = "./wire_protocol"}
pravega-rust-client-retry = {path = "./retry"}
pravega-connection-pool = {path = "./connection_pool"}
pravega-rust-client-channel = {path = "./channel"}
pravega-rust-client-auth = {path = "./auth"}
pravega-rust-client-config = {path = "./config"}
async-trait = "0.1.36"
futures = "0.3.5"
snafu = "0.6.2"
tokio = { version = "0.2.16", features = ["full"] }
tracing = "0.1.17"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.2"
rand = "0.7.3"
uuid = {version = "0.8", features = ["v4"]}
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
clap = {version = "2.33.0", optional = true}
structopt = {version = "0.3", optional = true}
derive-new = "0.5"
futures-intrusive = "0.3.0"
async-stream = "0.2.1"
serde_cbor = "0.11.1"
pcg_rand = "0.11.1"
bytes = "0.5"
im = "14.3.0"
tokio-util = "0.3.1"
metrics = "0.13.0-alpha.4"
metrics-exporter-prometheus = "0.1.0-alpha.4"
enum-iterator = "0.6.0"

[dev-dependencies]
pravega-rust-client-integration-test = { path = "./integration_test"}
mockall = "0.7.1"
ordered-float = { version= "1.0.2", features = ["serde"]}
criterion = "0.3"
byteorder = "1.3"
lazy_static = "1.4.0"

[[bin]]
name = "server-cli"
path = "src/cli.rs"
#Work around for issue  https://github.com/rust-lang/cargo/issues/1982
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "structopt"]

[[bench]]
name = "benchmark"
harness = false

# temporary fix for incompatible metrics version
[patch.crates-io]
metrics-exporter-prometheus = { git = 'https://github.com/Tristan1900/metrics.git' }
metrics = { git = 'https://github.com/Tristan1900/metrics.git' }