[package]
name = "pravega-rust-client-auth"
version = "0.1.0"
edition = "2018"
categories = ["Network programming"]
keywords = ["streaming", "client", "pravega"]
readme = "Readme.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "An internal library used by the Rust client for Pravega."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
           "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pravega-rust-client-shared = { path = "../shared"}
pravega-controller-client = { path = "../controller-client"}
async-trait = "0.1.36"
tokio = { version = "0.2.16", features = ["full"] }
base64 = "0.12.3"
regex = "1.3.9"
lazy_static = "1.4.0"