[package]
name = "pravega-client-auth"
version = "0.3.5"
edition = "2018"
categories = ["network-programming"]
keywords = ["streaming", "client", "pravega"]
readme = "README.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "An internal library used by the Rust client for Pravega."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
           "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pravega-client-shared = { path = "../shared", version = "0.3"}
pravega-controller-client = { path = "../controller-client", version = "0.3"}
async-trait = "0.1"
tokio = { version = "1.1", features = ["full"] }
base64 = "0.12"
regex = "1.3"
lazy_static = "1.4"
tracing = "0.1"
