[package]
name = "pravega"
version = "0.1.0"
edition = "2018"
categories = ["network-programming"]
keywords = ["streaming", "client", "pravega"]
readme = "README.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "Pravega client"
authors = ["Pravega Community"]

[package.metadata.maturin]
classifier = ["Development Status :: 3 - Alpha", "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9",]
requires-python = ">= 3.8"
project-url = ["Homepage, https://pravega.github.io/pravega-client-rust/"]

[lib]
name = "pravega_client"
crate-type = ["cdylib"]

[features]
default = ["python_binding"]
javascript_binding = ["wasm-bindgen"]
python_binding = ["pyo3"]

#Run tests for bindings using command cargo test --no-default-features

[dependencies]
tracing = "0.1.17"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.2"
pravega-client = { path = "../"}
pravega-client-shared = { path = "../shared"}
pravega-controller-client = { path = "../controller-client"}
pravega-wire-protocol = { path = "../wire_protocol"}
pravega-client-retry = {path = "../retry", version = "0.1"}
pravega-connection-pool = {path = "../connection_pool"}
pravega-client-config = {path = "../config"}
tokio = { version = "1.1", features = ["full"] }
lazy_static = "1.4.0"
uuid = {version = "0.8", features = ["v4"]}
futures = "0.3.5"
derive-new = "0.5"
#Python bindings
pyo3 = { features = ["extension-module"], optional = true, version = "0.11.0" }
#WASM bindings
wasm-bindgen = { version = "0.2.63", optional = true }
cfg-if = "0.1.10"
