[package]
name = "pravega-rust-client-config"
version = "0.1.0"
edition = "2018"
categories = ["Network programming"]
keywords = ["streaming", "client", "pravega"]
readme = "Readme.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "An internal library used by the Rust client for Pravega."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
           "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pravega-rust-client-shared = { path = "../shared"}
pravega-rust-client-retry = {path= "../retry"}
derive_builder = "0.9.0"
getset = "0.0.9"
serde_json = "1.0"
serde = "1.0.117"
reqwest = "0.10.8"
