[package]
name = "pravega-client-config"
version = "0.2.0"
edition = "2018"
categories = ["network-programming"]
keywords = ["streaming", "client", "pravega"]
readme = "README.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "An internal library used by the Rust client for Pravega."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
           "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pravega-client-shared = { path = "../shared", version = "0.2"}
pravega-client-retry = {path = "../retry", version = "0.2"}
derive_builder = "0.9"
getset = "0.0.9"
serde_json = "1.0"
serde = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"]}
base64 = "0.12"
tokio = "1.1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
serial_test = "*"