[package]
name = "pravega-connection-pool"
version = "0.1.0"
edition = "2018"
categories = ["network-programming"]
keywords = ["streaming", "client", "pravega"]
readme = "Readme.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "A connection pool used by the Pravega Rust client."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
           "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pravega-client-shared = "0.1"
async-trait = "0.1"
uuid = {version = "0.8", features = ["v4"]}
snafu = "0.6"
tokio = { version = "1.1", features = ["full"] }
futures = "0.3"
dashmap = "3.4"
