[package]
name = "pravega-controller-client"
version = "0.1.0"
edition = "2018"
build = "build.rs"
categories = ["Network programming"]
keywords = ["streaming", "client", "pravega"]
readme = "Readme.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "An internal library used by the Rust client for Pravega to talk to the Pravega controller."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
           "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

[dependencies]
pravega-rust-client-shared = { path = "../shared"}
pravega-wire-protocol = { path = "../wire_protocol"}
pravega-connection-pool = {path= "../connection_pool"}
pravega-rust-client-retry = {path = "../retry"}
async-trait = "0.1.36"
prost = "0.6.1"
snafu = "0.6.2"
tokio = { version = "0.2.8", features = ["full"] }
tonic = "0.1.1"
derive_more = "0.99.2"
ordered-float = "1.0.2"
uuid = {version = "0.8", features = ["v4"]}
clap = {version = "2.33.0", optional = true}
structopt = {version = "0.3", optional = true}
im = "14.3.0"
log = "0.4"

[build-dependencies]
tonic-build = "0.1.1"

[[bin]]
name = "controller-cli"
path = "src/cli.rs"
#Work around for issue  https://github.com/rust-lang/cargo/issues/1982
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "structopt"]
