[package]
name = "pravega-controller-client"
version = "0.1.0"
edition = "2018"
build = "build.rs"
categories = ["Network programming"]
keywords = ["streaming", "client", "pravega"]
readme = "Readme.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "An internal library used by the Rust client for Pravega to talk to the Pravega controller."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
           "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

[dependencies]
pravega-client-shared = { path = "../shared"}
pravega-wire-protocol = { path = "../wire_protocol"}
pravega-connection-pool = {path= "../connection_pool"}
pravega-client-retry = {path = "../retry"}
pravega-client-config = { path = "../config"}
async-trait = "0.1"
prost = "0.6"
snafu = "0.6"
tokio = { version = "0.2", features = ["full"] }
tonic = { version = "0.3", features = ["tls"] }
derive_more = "0.99.9"
ordered-float = "1.0"
uuid = {version = "0.8", features = ["v4"]}
clap = {version = "2.33", optional = true}
structopt = {version = "0.3", optional = true}
im = "14.3"
tracing = "0.1"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
h2 = "0.2"

[build-dependencies]
tonic-build = "0.3"

[[bin]]
name = "controller-cli"
path = "src/cli.rs"
#Work around for issue  https://github.com/rust-lang/cargo/issues/1982
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "structopt"]
