[package]
name = "pravega-controller-client"
version = "0.1.0"
edition = "2018"
build = "build.rs"
categories = ["network-programming"]
keywords = ["streaming", "client", "pravega"]
readme = "README.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "An internal library used by the Rust client for Pravega to talk to the Pravega controller."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
           "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

[dependencies]
pravega-client-shared = { path = "../shared", version = "0.1"}
pravega-wire-protocol = { path = "../wire_protocol", version = "0.1"}
pravega-client-retry = {path = "../retry", version = "0.1"}
pravega-connection-pool = {path = "../connection_pool", version = "0.1" }
pravega-client-config = {path = "../config", version = "0.1"}
async-trait = "0.1"
prost = "0.7"
snafu = "0.6"
tokio = { version = "1.1", features = ["full"] }
tonic = { version = "0.4", features = ["tls"] }
derive_more = "0.99.9"
ordered-float = "1.0"
uuid = {version = "0.8", features = ["v4"]}
clap = {version = "2.33", optional = true}
structopt = {version = "0.3", optional = true}
im = "15"
tracing = "0.1"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.3"

[[bin]]
name = "controller-cli"
path = "src/cli.rs"
#Work around for issue  https://github.com/rust-lang/cargo/issues/1982
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "structopt"]
