[package]
name = "pravega-rust-client-examples"
version = "0.3.0"
edition = "2018"
categories = ["network-programming"]
keywords = ["streaming", "client", "pravega"]
readme = "Readme.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "The integration test for pravega rust client."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
    "Sandeep Shridhar <sandeep.shridhar@dell.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pravega-client = { path = "../", version = "0.3"}
pravega-client-config = { path = "../config", version = "0.3"}
pravega-client-shared = { path = "../shared", version = "0.3"}
tokio = "1.5"

[[example]]
name = "event_write_and_read"
path = "event_write_and_read.rs"