[package]
name = "pravega-rust-client-integration-test"
version = "0.1.0"
edition = "2018"
categories = ["Network programming"]
keywords = ["streaming", "client", "pravega"]
readme = "Readme.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "The integration test for pravega rust client."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
           "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

[dependencies]
tracing = "0.1"
pravega-client-rust = { path = "../" }
pravega-wire-protocol = { path = "../wire_protocol"}
pravega-controller-client = { path = "../controller-client"}
pravega-rust-client-shared = { path = "../shared"}
pravega-rust-client-retry = {path = "../retry"}
pravega-connection-pool = {path= "../connection_pool"}
pravega-rust-client-config = {path = "../config"}
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4"
uuid = {version = "0.8", features = ["v4"]}
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
java-properties = "1.2"
derive-new = "0.5"

[build-dependencies]
tracing = "0.1"
flate2 = "1.0"
tar = "0.4"
pkg-config = "0.3"
reqwest = {version = "0.10", features = ["blocking"]}