[package]
authors = ["Pravega Community"]
categories = ["network-programming"]
description = "Pravega client"
edition = "2018"
exclude = ["pravega.node"]
keywords = ["streaming", "client", "pravega"]
license = "Apache-2.0"
name = "pravega_nodejs"
readme = "README.md"
repository = "https://github.com/pravega/pravega-client-rust"
version = "0.4.6"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5"
futures = "0.3"
pravega-client = {path = "../", version = "0.3"}
pravega-client-config = {path = "../config", version = "0.3"}
pravega-client-retry = {path = "../retry", version = "0.3"}
pravega-client-shared = {path = "../shared", version = "0.3"}
pravega-controller-client = {path = "../controller-client", version = "0.3"}
tokio = "1.1"
tracing = "0.1.17"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.2"

[dependencies.neon]
default-features = false
features = ["napi-6", "promise-api", "channel-api"]
version = "0.10.0"
