[package]
name = "pravegactl"
version = "0.3.4"
edition = "2018"
categories = ["network-programming"]
keywords = ["streaming", "client", "pravega"]
readme = "Readme.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "A Pravega command-line tool, pravegactl, it allows you to run commands against Pravega clusters"
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
    "Sandeep Shridhar <sandeep.shridhar@dell.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
structopt = "0.3"
pravega-client = { path = "../", version = "0.3"}
pravega-controller-client = {path = "../controller-client", version = "0.3"}
pravega-client-config = { path = "../config", version = "0.3"}
pravega-client-shared = { path = "../shared", version = "0.3"}
tokio = "1.8.2"
tracing = "0.1"
tracing-subscriber = "0.2.19"
futures = "0.3"

[[bin]]
name = "pravegactl"
path = "src/main.rs"

[profile.release]
lto = true
