[package]
name = "praveglet"
version = "0.1.0"
edition = "2018"
categories = ["network-programming"]
keywords = ["streaming", "client", "pravega"]
readme = "Readme.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "The integration test for pravega rust client."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
    "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
structopt = "0.3"
pravega-client = { path = "../", version = "0.3"}
pravega-controller-client = {path = "../controller-client", version = "0.2"}
pravega-client-config = { path = "../config", version = "0.2"}
pravega-client-shared = { path = "../shared", version = "0.2"}
tokio = "1.8.2"
tracing = "0.1"
tracing-subscriber = "0.2.19"
futures = "0.3"

[[bin]]
name = "praveglet"
path = "src/main.rs"