[package]
name = "pravega"
version = "0.3.5"
edition = "2018"
categories = ["network-programming"]
keywords = ["streaming", "client", "pravega"]
readme = "README.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "Pravega client"
authors = ["Pravega Community"]


[lib]
name = "pravega_client"
crate-type = ["cdylib"]

[features]
default = ["python_binding"]
javascript_binding = ["wasm-bindgen"]
python_binding = ["pyo3", "pyo3-asyncio"]

#Run tests for bindings using command cargo test --no-default-features

[dependencies]
tracing = "0.1.17"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.2"
pravega-client = { path = "../", version = "0.3"}
pravega-client-shared = { path = "../shared", version = "0.3"}
pravega-controller-client = { path = "../controller-client", version = "0.3"}
pravega-wire-protocol = { path = "../wire_protocol", version = "0.3"}
pravega-client-retry = {path = "../retry", version = "0.3"}
pravega-connection-pool = {path = "../connection_pool", version = "0.3"}
pravega-client-config = {path = "../config", version = "0.3"}
tokio = "1.1"
lazy_static = "1.4.0"
uuid = {version = "0.8", features = ["v4"]}
futures = "0.3.5"
derive-new = "0.5"
#Python bindings
pyo3 = { version = "0.14.5" , features = ["extension-module", "multiple-pymethods"], optional = true }
pyo3-asyncio = { version = "0.14", features = ["tokio-runtime"], optional = true }
#WASM bindings
wasm-bindgen = { version = "0.2.63", optional = true }
cfg-if = "0.1.10"
