[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"


classifiers = ["Development Status :: 5 - Production/Stable", "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",  "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",]
requires-python = ">=3.7"
url= "https://pravega.github.io/pravega-client-rust/"
