[package]
authors = [
  "Tom Kaitchuck <Tom.Kaitchuck@dell.com>",
  "Wenqi Mou <wenqi.mou@dell.com>",
  "Sandeep Shridhar <sandeep.shridhar@dell.com>",
  "Wenxiao Zhang <wenxiao.zhang@dell.com>",
]
categories = ["network-programming"]
description = "An internal library used by the Rust client for Pravega."
edition = "2018"
keywords = ["streaming", "client", "pravega"]
license = "Apache-2.0"
name = "pravega-client-retry"
readme = "README.md"
repository = "https://github.com/pravega/pravega-client-rust"
version = "0.3.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
snafu = "0.6"
tokio = {version = "1.1", features = ["full"]}
